--- a/app/scss/blocks/about.scss
+++ b/app/scss/blocks/about.scss
@@ -6,6 +6,10 @@
     padding-top: 150px;
   }
 
+  @include breakpoint($tablet-bp) {
+    padding-top: 40px;
+  }
+
   &__top {
     display: flex;
     margin-bottom: 120px;
@@ -22,6 +26,7 @@
 
     @include breakpoint($desktop-bp) {
       margin-right: 0;
+      min-width: 100%;
     }
   }
 
@@ -56,6 +61,10 @@
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
+    }
+
+    @include breakpoint($tablet-bp) {
+      display: none;
     }
   }
 
@@ -114,7 +123,5 @@
     max-width: 33%;
   }
 
-  &__service {
-    
-  }
+  &__service {}
 }
