--- a/app/scss/blocks/footer.scss
+++ b/app/scss/blocks/footer.scss
@@ -13,6 +13,10 @@
       flex-wrap: wrap;
       padding-bottom: 38px;
     }
+
+    @include breakpoint($tablet-bp) {
+      justify-content: flex-start;
+    }
   }
 
   &__col {
@@ -22,6 +26,19 @@
       margin-right: 29px;
       margin-bottom: 29px;
       max-width: 45%;
+    }
+
+    &:first-child {
+      @include breakpoint($tablet-bp) {
+        min-width: 100%;
+      }
+    }
+
+    &:last-child {
+      @include breakpoint($tablet-bp) {
+        margin-right: 0;
+        min-width: 100%;
+      }
     }
   }
 
@@ -82,6 +99,13 @@
     }
   }
 
+  &__label {
+
+    @include breakpoint($tablet-bp) {
+      width: 100%;
+    }
+  }
+
   &__form {
     display: flex;
   }
@@ -98,6 +122,11 @@
     border-bottom: 2px solid transparent;
     cursor: pointer;
     transition: background-color 0.3s linear;
+
+    @include breakpoint($tablet-bp) {
+      display: block;
+      width: 100%;
+    }
 
 
     &::placeholder {
@@ -184,8 +213,8 @@
 
   &__item {
     display: inline-block;
-    margin-left: 16px;
-    padding-right: 16px;
+    margin-left: 13px;
+    padding-right: 13px;
     border-right: 1px solid $grey;
 
     &:last-child {
