--- a/app/scss/components/insights-card.scss
+++ b/app/scss/components/insights-card.scss
@@ -1,5 +1,8 @@
 .insights-card {
 
+  @include breakpoint($mobile-bp) {
+  margin-bottom: 30px;}
+
   &__link {
     display: block;
     max-height: 250px;
@@ -50,6 +53,10 @@
     flex-direction: column;
     align-items: flex-start;
     position: relative;
+
+    @include breakpoint($mobile-bp) {
+      box-shadow: inset 0 0 4.5em 0.5em #cfb9b9;
+    }
   }
 
   &__bottom {
@@ -62,7 +69,9 @@
       padding-right: 10px;
     }
 
-
+    @include breakpoint($tablet-bp) {
+      box-shadow: inset 0 0 4.5em 0.5em #cfb9b9;
+    }
   }
 
   &__label {
