--- a/app/scss/components/object-new.scss
+++ b/app/scss/components/object-new.scss
@@ -1,83 +1,71 @@
 .object-new {
-  position: relative;
-  max-width: 370px;
   min-height: 250px;
-  width: 100%;
-  margin-left: 30px;
-  margin-bottom: 30px;
   
   background-color: rgb(248, 248, 248);
   overflow: hidden;
 
-  &::after {
-
-    @include breakpoint($mobile-bp) {
-      content: '';
-      position: absolute;
-      min-width: 100%;
-      min-height: 100%;
-      top: 0;
-      left: 0;
-
-      background-color: darken($title, 45%);
-      opacity: 0.2;
-      z-index: 5;
-      mix-blend-mode: color-burn;
-    }
-  }
-
-
-
   &__link {
-    padding: 40px 0 30px 40px;
-    height: 100%;
-    display: block;
     position: relative;
-
+    display: block;
     z-index: 1;
-    transition: all 0.3s linear;
+    height: 100%;
+    padding: 40px 0 30px 40px;
+
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: right;
+    transform: scale(1);
+
+    transition: transform 0.3s linear;
 
     &::before {
-      content: '';
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      top: 0;
-      left: 0;
 
-      z-index: 2;
+      @include breakpoint($mobile-bp) {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        z-index: 2;
 
-      background-color: darken($text, 15%);
-      opacity: 0;
-      transition: opacity 0.3s linear;
+        background-color: #fff;
+        opacity: 0.2;
+
+        transition: opacity 0.3s linear;
+      }
     }
 
+    &::after {
+      content: '';
+      position: absolute;
+      z-index: -1;
+      top: 0;
+      left: 0;
+      width: 0%;
+      height: 0%;
 
-
-    &:active {
-
-      .object-new__title {
-        color: darken($accent, 13%);
-      }
+      box-shadow: inset 0 0 4.5em 0.5em #cfb9b9;
+      transform-origin: center;
+      transition: width 0.01s linear,
+        height 0.01s linear;
     }
 
     &:hover {
+      transform: scale(1.1);
 
-      &::before {
-        opacity: 0.4;
-      }
-
-      .object-new__img {
-        transform: scale(1.1);
-      }
-
-      .object-new__type {
-        color: lighten($accent, 23%);
+      &::after {
+        width: 100%;
+        height: 100%;
       }
     }
 
     &:focus {
       outline-color: $accent;
+    }
+
+    &:active {
+      border: 1px solid transparent;
     }
   }
 
@@ -97,6 +85,10 @@
     color: darken($title, 20%);
 
     transition: color 0.3 linear;
+
+    @include breakpoint($tablet-bp) {
+      text-shadow: white 2px 2px 2px;
+    }
   }
 
   &__type {
@@ -104,47 +96,5 @@
     font-size: 16px;
     line-height: 1.2;
     color: $accent;
-  }
-
-  &__image {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    max-width: 100%;
-
-    z-index: 1;
-
-    overflow: hidden;
-
-     &::after {
-
-       @include breakpoint($mobile-bp) {
-         content: '';
-         position: absolute;
-         min-width: 100%;
-         min-height: 100%;
-         top: 0;
-         left: 0;
-
-         z-index: 5;
-
-         background-color: darken(red, 5%);
-         opacity: 1;
-         mix-blend-mode: color-burn;
-       }
-     }
-  }
-
-  &__img {
-    display: block;
-    width: 100%;
-    height: 100%;
-
-    object-fit: cover;
-    transform: scale(1);
-    
-    transition: transform 0.3s linear;
-
-    
   }
 }
