--- a/app/scss/components/product-card.scss
+++ b/app/scss/components/product-card.scss
@@ -77,6 +77,13 @@
     transform: translate(-50%, -50%);
     opacity: 0;
     transition: opacity 0.4s linear;
+
+    @include breakpoint($tablet-bp) {
+      border-radius: 30px;
+      opacity: 1;
+      background-color: rgba(163, 187, 200, 0.2);
+      box-shadow: 0 0 4em 0em #a3bbc8;
+    }
   }
 
   &__icon {
@@ -84,16 +91,18 @@
     display: grid;
     place-items: center;
     padding: 0;
+    margin: 0 20px;
+
 
     @extend %btn;
     font-size: 0;
     background-color: transparent;
     outline: transparent;
 
-    &--link,
-    &--btn {
-      margin: 0 20px;
-    }
+    // &--link,
+    // &--btn {
+    //   margin: 0 20px;
+    // }
 
     &--btn-active {
 
