--- a/app/scss/components/services.scss
+++ b/app/scss/components/services.scss
@@ -1,5 +1,5 @@
 .services {
-  padding: 45px 0 45px 35px;
+  // padding: 45px 0 45px 0px;
   background-color: lighten($bg, 11%);
   display: flex;
   justify-content: space-around;
@@ -9,23 +9,35 @@
   }
 
   &__item {
+    padding: 45px 0 45px 0px;
     position: relative;
-    flex: 0 0 309px;
-    padding-left: 90px;
+    width: 100%;
+
+    padding-left: 232px;
+
+    @include breakpoint($desktop-bp) {
+      flex: 0 0 33%;
+      padding-left: 90px;
+    }
 
     @include breakpoint($tablet-bp) {
-      margin-bottom: 35px;
+      min-width: 100%;
       padding-bottom: 35px;
+      padding-left: 130px;
+    }
+
+    @include breakpoint($mobile-bp) {
+      padding-left: 90px;
     }
 
     &::after {
 
       @include breakpoint($tablet-bp) {
-        content:'';
-        position: absolute; 
-        bottom: 0; 
+        content: '';
+        position: absolute;
+        bottom: 0;
         left: 0;
-        
+
         width: 100%;
         height: 1px;
 
@@ -33,28 +45,28 @@
       }
     }
 
-    &:not(:last-child) {
+    &:not(:first-child) {
 
       &::after {
         content: '';
         position: absolute;
-        top: -45px;
-        right: 0;
+        top: 0;
+        left: 0;
 
         width: 1px;
-        height: 164px;
+        height: 100%;
 
-        background-color: $accent;
+        background-color: #e8e4df;
 
         @include breakpoint($tablet-bp) {
-            top: auto;
-            bottom: 0;
-            left: 0;
+          top: auto;
+          bottom: 0;
+          left: 0;
 
-            width: 100%;
-            height: 1px;
+          width: 100%;
+          height: 1px;
 
-            background: linear-gradient(90deg, rgba(163, 187, 200, 1) 0%, rgba(252, 215, 182, 1) 100%);
+          background: linear-gradient(90deg, rgba(163, 187, 200, 1) 0%, rgba(252, 215, 182, 1) 100%);
         }
       }
     }
