--- a/app/scss/blocks/insights.scss
+++ b/app/scss/blocks/insights.scss
@@ -23,6 +23,7 @@
   &__top-link {
     display: inline-block;
     padding-right: 36px;
+
     @extend %dmsans-700;
     color: darken($text, 10%);
     position: relative;
@@ -73,7 +74,7 @@
         width: 100%;
       }
     }
-    
+
     &:hover {
 
       &:before {
@@ -106,14 +107,14 @@
 
   &__companies {
     position: relative;
-    padding: 90px 0;
+    padding: 90px 0 80px;
     background-color: lighten($bg, 11%);
 
     &::before {
       content: '';
       position: absolute;
       width: 100%;
-      height: 177px;
+      height: 190px;
       bottom: 100%;
       z-index: -1;
       background-color: lighten($bg, 11%);
