--- a/app/scss/blocks/sub-about.scss
+++ b/app/scss/blocks/sub-about.scss
@@ -2,20 +2,49 @@
   background-color: $bg;
 
   &__services.services {
-    padding: 90px 0 80px 0;
+    padding: 55px 0 80px 0;
     background-color: $bg;
   }
+
+
 
   .service {
     min-width: 25%;
     text-align: center;
-    padding-top: 70px;
+    padding-top: 104px;
     padding-left: 0;
+    position: relative;
+
 
     @include breakpoint($tablet-bp) {
       max-width: 540px;
       text-align: center;
       margin-bottom: 40px;
+      z-index: 1;
+      padding-bottom: 30px;
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      min-height: 100%;
+      border-top-left-radius: 50%;
+      border-bottom-right-radius: 50%;
+      // background-color: rgba(148, 45, 45, 0.1);
+      background: rgb(163, 187, 200);
+      background: linear-gradient(120deg, rgba(163, 187, 200, 1) 0%, rgba(252, 215, 182, 1) 100%);
+      z-index: 1;
+      left: 0;
+      top: 0;
+      transition: background-color 0.4s linear,
+        box-shadow 0.3s linear;
+      opacity: 0;
+      border: 1px solid $grey;
+
+      @include breakpoint($tablet-bp) {
+        opacity: 0.2;
+      }
     }
 
     &:nth-child(odd) {
@@ -25,6 +54,7 @@
 
       &::before {
         @include breakpoint($tablet-bp) {
+          top: 50px;
           right: auto;
           left: 50%;
           transform: translateX(-50%);
@@ -33,15 +63,29 @@
     }
 
     &:nth-child(even) {
+
       @include breakpoint($tablet-bp) {
         margin-left: auto;
       }
 
       &::before {
         @include breakpoint($tablet-bp) {
+          top: 50px;
+
           right: 50%;
           left: auto;
           transform: translateX(50%);
+        }
+      }
+
+      &::after {
+
+        @include breakpoint($tablet-bp) {
+          border-top-left-radius: 0;
+          border-top-right-radius: 50%;
+          border-bottom-right-radius: 0%;
+          border-bottom-left-radius: 50%;
+          background: linear-gradient(13deg, #a3bbc8 0%, #fcd7b6 100%);
         }
       }
     }
