--- a/app/modules/_user-nav/_user-nav.scss
+++ b/app/modules/_user-nav/_user-nav.scss
@@ -1,6 +1,21 @@
 .user-nav {
   display: flex;
 
+  &__svg {
+    width: 20px;
+    height: 20px;
+
+    use {
+      fill: $title;
+    }
+
+    &--color-white {
+      use {
+        fill: $white;
+      }
+    }
+  }
+
   &__cabinet {
     display: flex;
     min-height: 50px;
@@ -19,8 +34,9 @@
       width: 1px;
       height: 34px;
 
-      transform: translate(-50%, -50%);
       background-color: $white;
+
+      transform: translate(-50%, -50%);
     }
 
     span {
@@ -30,11 +46,12 @@
       top: 5px;
       right: 20px;
 
+      line-height: 1.8;
+      font-size: 10px;
+
       border-radius: 50%;
       text-align: center;
-      line-height: 1.8;
       background-color: $white;
-      font-size: 10px;
     }
   }
 
@@ -45,8 +62,9 @@
     min-width: 50px;
     height: 50px;
 
-    border-radius: 50%;
     font-size: 0;
+
+    border-radius: 50%;
 
     &--find {
       background-color: lighten($accent, 20%);
@@ -62,23 +80,23 @@
       padding: 0 30px;
     }
 
-    path {
+    use {
       transition: fill 0.3s linear;
     }
 
     &:hover {
 
-      path {
+      use {
         fill: darken(red, 20%);
       }
     }
 
-    &:active {
-      background-color: $white;
-    }
-
     &:focus {
       background-color: darken($bg, 10%);
+    }
+
+    &:active {
+      background-color: $white;
     }
   }
 }
