--- a/app/scss/components/_filter-aside.scss
+++ b/app/scss/components/_filter-aside.scss
@@ -2,6 +2,19 @@
   margin-bottom: 50px;
   background-color: $white;
 
+  &:last-child {
+
+    .filter-aside__title {
+
+      &::before {
+
+        @include breakpoint($tablet-bp) {
+          display: none;
+        }
+      }
+    }
+  }
+
   &__title {
     position: relative;
     display: inline-block;
@@ -11,8 +24,13 @@
     color: $title;
     font-size: 18px;
     line-height: 1;
+
     @extend %dmsans-700;
     text-transform: uppercase;
+
+    @include breakpoint($tablet-bp) {
+      display: block;
+    }
 
     &::before {
       content: '';
@@ -24,6 +42,40 @@
 
       background-color: $accent;
       transform: translateY(-50%);
+
+      @include breakpoint($tablet-bp) {
+        width: 0;
+        height: 0;
+
+        background-color: $white;
+        border-style: solid;
+        border-width: 10px 20px 0 20px;
+        border-color: $accent transparent transparent transparent;
+
+        transition: border-width 0.2s ease-in;
+
+      }
+    }
+
+    &--rotate-triangle {
+
+      &:before {
+
+        @include breakpoint($tablet-bp) {
+          border-width: 0px 20px 10px 20px;
+          border-color: transparent transparent $accent transparent;
+        }
+      }
+    }
+
+  }
+
+  &__form-category,
+  &__form-price,
+  &__form-brand {
+
+    @include breakpoint($tablet-bp) {
+      display: none;
     }
   }
 
@@ -65,11 +117,11 @@
     position: relative;
     display: block;
     padding: 0 15px;
-
-    line-height: 2.7;
-    font-size: 16px;
+    
     @extend %rubik-400;
     color: $title;
+    line-height: 2.7;
+    font-size: 16px;
   }
 
   &__category {
@@ -83,15 +135,16 @@
       width: 7px;
       height: 12px;
 
-      transform: translateY(-50%);
       background-image: url('../images/icon/arrow-showmore.svg');
       background-repeat: no-repeat;
+      transform: translateY(-50%);
     }
   }
 
   &__span-box {
     display: flex;
     justify-content: space-between;
+    padding-right: 10px;
 
     border-radius: 5px;
   }
@@ -102,6 +155,7 @@
     display: inline-block;
     padding-left: 10px;
 
+    color: $title;
     @extend %rubik-400;
 
     &::before {
@@ -110,7 +164,6 @@
       left: 0;
     }
   }
-
 
   .irs--flat .irs-min,
   .irs--flat .irs-max,
@@ -141,5 +194,14 @@
 
   .irs--flat .irs-handle>i:first-child {
     width: 0;
+  }
+
+  .irs--flat .irs-single {
+    font-size: 0;
+    background-color: transparent;
+
+    &::before {
+      border-top-color: transparent;
+    }
   }
 }
