--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -17,6 +17,7 @@
 @import "components/object-new";
 @import "components/insights-card";
 @import "components/filter-aside";
+@import "components/filter-top";
 @import "components/recent";
 @import "components/pagination";
 @import "components/advantage";
