--- a/app/modules/_drop-menu/_drop-menu.scss
+++ b/app/modules/_drop-menu/_drop-menu.scss
@@ -14,7 +14,7 @@
     content: '+';
     position: absolute;
     font-size: 16px;
-    right: 20px;
+    right: 0;
     top: 50%;
     transform: translateY(-50%);
   }
