--- a/app/scss/blocks/_week.scss
+++ b/app/scss/blocks/_week.scss
@@ -52,9 +52,20 @@
       // justify-content: center;
 
       display: grid;
-      grid-template-columns:repeat(auto-fit, minmax(240px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
       grid-gap: 20px;
       margin: 0 auto 60px;
+    }
+
+    &--list {
+      display: block;
+
+      @include breakpoint($tablet-bp) {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+        grid-gap: 40px 20px;
+        // margin: 0 auto 60px;
+      }
     }
   }
 
@@ -137,7 +148,7 @@
     margin-bottom: 120px;
 
     @include breakpoint($tablet-bp) {
-    margin-bottom: 60px;
+      margin-bottom: 60px;
     }
   }
 }
