--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -22,6 +22,11 @@
 @import "components/pagination";
 @import "components/advantage";
 @import "components/our-profile";
+@import "components/post";
+@import "components/sidebar";
+@import "components/author";
+@import "components/comment";
+@import "components/form-blog";
 
 
 @import "blocks/header";
@@ -37,5 +42,8 @@
 @import "blocks/sub-about";
 @import "blocks/our";
 @import "blocks/footer";
+@import "blocks/blog-list";
+@import "blocks/blog-one";
+
 
 
