--- a/app/scss/components/_filter-top.scss
+++ b/app/scss/components/_filter-top.scss
@@ -1,13 +1,19 @@
 .filter-top {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  padding: 20px 30px;
 
-  border: 1px solid #ebebeb;
+  padding: 20px 30px 0;
+  
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding-bottom: 20px;
+    
+    border-bottom: 1px solid #ebebeb;
 
-  @include breakpoint($mobile-bp) {
-    display: block;
+
+    @include breakpoint($mobile-bp) {
+      display: block;
+    }
   }
 
   &__selects {
