--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -44,6 +44,12 @@
 @import "blocks/footer";
 @import "blocks/blog-list";
 @import "blocks/blog-one";
+@import "blocks/product-details";
+@import "blocks/tabs";
+@import "blocks/related";
+@import "blocks/therms";
+@import "blocks/contact";
+@import "blocks/login";
 
 
 
