--- a/app/scss/blocks/_insights.scss
+++ b/app/scss/blocks/_insights.scss
@@ -1,5 +1,9 @@
 .insights {
-  padding-top: 113px;
+  padding-top: 89px;
+
+  &--pt125 {
+    padding-top: 125px;
+  }
 
   @include breakpoint($tablet-bp) {
     padding-top: 60px;
