--- a/app/scss/global/_libs.scss
+++ b/app/scss/global/_libs.scss
@@ -4,3 +4,5 @@
 @import "../../node_modules/rateyo/src/jquery.rateyo";
 @import "../../node_modules/swiper/swiper-bundle";
 @import "../../node_modules/swiper/components/effect-cube/effect-cube";
+@import "../../node_modules/jquery-form-styler/dist/jquery.formstyler";
+@import "../../node_modules/jquery-form-styler/dist/jquery.formstyler.theme";
