--- a/app/scss/global/_vars.scss
+++ b/app/scss/global/_vars.scss
@@ -1,4 +1,3 @@
-
 $white: #fff;
 $text: #436372;
 $title: #243f4d;
@@ -60,6 +59,14 @@ $mobile-bp: 540px;
   background: linear-gradient(90deg, rgba(163, 187, 200, 1) 0%, rgba(252, 215, 182, 1) 100%);
 }
 
+%visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+}
+
 @function max($numbers...) {
   @return m#{a}x(#{$numbers});
 }
@@ -67,4 +74,3 @@ $mobile-bp: 540px;
 @function min($numbers...) {
   @return m#{i}n(#{$numbers});
 }
-
