--- a/app/scss/blocks/_contact.scss
+++ b/app/scss/blocks/_contact.scss
@@ -70,9 +70,9 @@
 
     &:last-child {
 
-       @include breakpoint($tablet-bp) {
-         margin-bottom: 0;
-       }
+      @include breakpoint($tablet-bp) {
+        margin-bottom: 0;
+      }
     }
 
     &:hover {
@@ -176,65 +176,20 @@
     @include breakpoint($tablet-bp) {
       display: block;
     }
+  }
 
-    .form-blog {
-      max-width: 620px;
-      width: 100%;
+  &__form-blog {
+    max-width: 620px;
+    width: 100%;
+    margin-top: 0;
 
-      @include breakpoint($tablet-bp) {
-        max-width: 100%;
-        margin-bottom: 60px;
-      }
-
-      @include breakpoint($mobile-bp) {
-       margin-bottom: 40px;
-      }
+    @include breakpoint($tablet-bp) {
+      max-width: 100%;
+      margin-bottom: 60px;
     }
 
-    .form-blog__row {
-      margin-bottom: 30px;
-    }
-
-    .form-blog__textarea {
-      min-height: 170px;
-      margin-bottom: 30px;
-    }
-
-    .form-blog {
-      margin-top: 0;
-    }
-
-    .form-blog__input,
-    .form-blog__textarea {
-      text-transform: uppercase;
-      background-color: lighten($accent, 26%);
-      border-color: transparent;
-
-      transition: all 0.3s linear;
-      // transition: background-color 0.3s linear;
-
-      &::placeholder {
-        color: darken($title, 10%);
-
-        transition: color 0.3s linear;
-      }
-
-        &:hover {
-          border-color: lighten($accent, 15%);
-          background-color: lighten($bg, 14%);
-        }
-
-        &:focus {
-          background-color: lighten($bg, 11%);
-        }
-
-        &:active {
-          color: $accent;
-        }
-    }
-
-    .form-blog__btn {
-      border-radius: none;
+    @include breakpoint($mobile-bp) {
+      margin-bottom: 40px;
     }
   }
 
@@ -251,9 +206,6 @@
 
     @include breakpoint($tablet-bp) {
       margin-left: 0;
-
     }
   }
-
-
 }
