--- a/app/scss/components/_post.scss
+++ b/app/scss/components/_post.scss
@@ -1,6 +1,8 @@
 .post {
   margin-bottom: 50px;
 
+ 
+
   &:last-child {
     margin-bottom: 0;
   }
@@ -11,8 +13,6 @@
 
       p:first-child {
         margin-bottom: 16px;
-
-        @extend %rubik-500;
       }
 
       span {
@@ -59,9 +59,8 @@
 
     .post__image {
       margin-bottom: 40px;
+      pointer-events: none;
     }
-
-
   }
 
   &__image {
@@ -256,7 +255,7 @@
       margin-bottom: 46px;
       padding: 22px 40px;
 
-      border-left: 3px solid $accent;
+      border-left: 6px solid $accent;
       background-color: lighten($color: $accent, $amount: 20%)
     }
 
@@ -310,8 +309,7 @@
     border: 1px solid $accent;
 
     transition: color 0.5s linear,
-      background-color 0.5s linear,
-    ;
+      background-color 0.5s linear;
 
     use {
       fill: $accent;
